--- a/css/styles.css
+++ b/css/styles.css
@@ -1,67 +1,214 @@
-.main-app {
-    width: 300px;
+h1 {
+    font-family: 'Segment7', sans-serif;
+    font-family: 'Bungee Hairline', sans-serif;
+    font-family: 'Rationale', sans-serif;
+}
+.time {
+    font-family: 'Segment7', sans-serif;
+}
+
+body {
+    font-size: 40px;
+    font-family: 'Rationale', sans-serif;
+    transition: background-color 1s, color 1s;
+}
+
+.sun-moon {
+    transition: 5s;
+}
+
+.watch-div {
     margin: auto;
-text-align: center;
-}
-
-.display {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 5px;
-    height: 50px;
-    margin: 0 0 5px;
-    padding: 5px;
-    font-size: 25px;
-}
-.display-value {
-    text-align: right;
-    width: 100px;
-    font-size: 25px;;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    /* display: none; <- Crashes Chrome on hover */
-    -webkit-appearance: none;
-    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
-}
-
-input[type=number] {
-    -moz-appearance:textfield; /* Firefox */
-}
-
-
-.btn {
-    padding: 20px;
-    margin: 1px 2px;
-    font-size: 20px;
-    width: 70px;
-    height: 70px;
-}
-.btn-clear, .btn-backspace {
-    font-size: 15px;
-    width: 105px;
-}
-
-.numbers {
-    display: flex;
-    width: 250px;
-    flex-wrap: wrap;
-    justify-content: center;
-    flex-flow: wrap-reverse;
-    align-items: center;
-
-}
-
-.keys {    
-    display: flex;
-    margin: auto;
-}
-
-.operators {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 400px;
+    background-color: rgb(90, 90,90) ;
+    height: 700px;
+    border-radius: 40px;
+}
+
+.top-div {
+    height: 50px;
+    display: grid;
+    grid-template-columns: 150px 150px;
+    grid-auto-rows: minmax(auto, auto);
+    color: white;
+    font-size: 15px;
+    padding: 0;    
+}
+
+.casio {
+    font-family: "Orbitron";
+    font-size: 25px;
+}
+.data-bank {
+    color: gold;
+    font-size: 20px;
+    font-style: italic;
+    text-align: end;
+}
+.number-150 {
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+.illuminator {
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: -1;
+    letter-spacing: 3px;
+    color: turquoise;
+    font-style: italic;
+    font-weight: bold;
+}
+
+
+
+.display-div {
+    color: black;
+    padding: 20px;
+    margin: 5px auto 15px;
+    background-color: lightgray ;
+    border-radius: 12px;
+    border: slategray inset 10px;
+    height: 200px;
+    width: 230px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    transition: background-color 1s cubic-bezier(0.25, 0.94, 0, 0.97);
+    box-shadow: -1px -1px 10px inset black;
+}
+.display-outer-div {
+    padding: 10px 0 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    width: 360px;
+    height: 300px;
+    border-radius: 35px 35px 10px 10px;
+    border: 2px outset grey;
+}
+.middle-div {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.memory-protect-div {
+    padding: 0 0 0 7px;
+    color: gold;
+    font-style: italic;
+    font-size: 25px;   
+    width: 170px;
+    height: 30px;
+    background-color: rgb(0, 46, 71);
+    border-radius: 5px 0px 0px 5px;
+}
+.tri-1 {
+   
+    height: 0;
+    width: 0;
+    border-top: 30px solid rgb(0, 46, 71);
+    border-right: 30px solid transparent;
+}
+.tri-2 {   
+    height: 0;
+    border-bottom: 35px solid gray;
+    border-left: 35px solid transparent;
+    box-shadow: 2px 2px black;
+    cursor: pointer;
+}
+.tri-2-pressed {
+    box-shadow: none;
+}
+
+.light {
+    padding: 0 7px 0 0;
+    font-size: 26px;
+    height: 35px;
+    font-family: Arial, sans-serif;
+    letter-spacing: 2px;
+    font-weight: bold;
+    background-color: gray;
+    color: gold;
+    border-radius: 0 5px 5px 0;
+    box-shadow: 2px 2px black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.light-pressed {
+    box-shadow: none;
+}
+
+.on {
+    display: block;
+}
+.off {
+    display: none;
+}
+
+.keyboard {
+    margin: 10px 0 0;
+    background-color: rgb(65, 65,65);
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(4, 75px);
+    grid-gap: 10px;
+    border: inset 2px rgb(100, 100,100);
+    border-radius: 10px;
+
+}
+
+.btn {
+    width: 75px;
+    height: 40px;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+    border: solid 1px rgb(45, 45,45);
+    box-shadow: -1px -1px 10px inset darkslategray;
+    font-size: 18px;
+    font-weight: bold;
+    font-family:monospace;
+    letter-spacing: 3px;
+}
+
+.btn-top {
+    background-color: steelblue;
+}
+
+.lights-off {
+    background-color: black;
+    color: white;
+}
+.dark-screen {
+    background-color: rgb(10, 10, 10);
+}
+.backlight {
+    background-color: darkturquoise;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+h1 {
+    margin: 0;
+}
+
+.day {
+    width: auto;
+}
+.night {
+    width: 0;
 }
