--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,17 @@ h1 {
     font-family: 'Bungee Hairline', sans-serif;
     font-family: 'Rationale', sans-serif;
 }
+
+@font-face {
+    font-family: 'Digital Numbers Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Digital Numbers Regular'), url('/DigitalNumbers-Regular.woff') format('woff');
+    }
+
 .time {
-    font-family: 'Segment7', sans-serif;
+    font-family: 'Digital Numbers Regular', sans-serif;
+    font-size: 35px;
 }
 
 body {
@@ -25,9 +34,11 @@ body {
     align-items: center;
     width: 400px;
     background-color: rgb(90, 90,90) ;
-    height: 700px;
+    height: 650px;
     border-radius: 40px;
+    box-shadow: 10px 10px 25px 1px rgb(90, 90,90);
 }
+
 
 .top-div {
     height: 50px;
@@ -64,8 +75,6 @@ body {
     font-weight: bold;
 }
 
-
-
 .display-div {
     color: black;
     padding: 20px;
@@ -73,13 +82,14 @@ body {
     background-color: lightgray ;
     border-radius: 12px;
     border: slategray inset 10px;
-    height: 200px;
+    height: 100px;
     width: 230px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
-    transition: background-color 1s cubic-bezier(0.25, 0.94, 0, 0.97);
-    box-shadow: -1px -1px 10px inset black;
+
+    transition: box-shadow 0.5s cubic-bezier(0.25, 0.94, 0, 0.97),
+    background-color 1s cubic-bezier(0.25, 0.94, 0, 0.97);
 }
 .display-outer-div {
     padding: 10px 0 0;
@@ -89,11 +99,12 @@ body {
     align-items: center;
     background-color: black;
     width: 360px;
-    height: 300px;
+    height: 250px;
     border-radius: 35px 35px 10px 10px;
     border: 2px outset grey;
 }
 .middle-div {
+    width: 90%;
     margin-top: 10px;
     display: flex;
     justify-content: center;
@@ -101,7 +112,7 @@ body {
 }
 
 .memory-protect-div {
-    padding: 0 0 0 7px;
+    padding: 0 0 0 10px;
     color: gold;
     font-style: italic;
     font-size: 25px;   
@@ -117,7 +128,8 @@ body {
     border-top: 30px solid rgb(0, 46, 71);
     border-right: 30px solid transparent;
 }
-.tri-2 {   
+.tri-2 {
+      
     height: 0;
     border-bottom: 35px solid gray;
     border-left: 35px solid transparent;
@@ -130,7 +142,7 @@ body {
 
 .light {
     padding: 0 7px 0 0;
-    font-size: 26px;
+    font-size: 23px;
     height: 35px;
     font-family: Arial, sans-serif;
     letter-spacing: 2px;
@@ -143,6 +155,7 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    text-shadow: 1px 1px 1px rgb(10, 10, 10), -1px -1px 1px rgb(200,200,200);
 }
 .light-pressed {
     box-shadow: none;
@@ -175,7 +188,7 @@ body {
     border-radius: 5px;
     border: solid 1px rgb(45, 45,45);
     box-shadow: -1px -1px 10px inset darkslategray;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     font-family:monospace;
     letter-spacing: 3px;
@@ -192,9 +205,6 @@ body {
 .dark-screen {
     background-color: rgb(10, 10, 10);
 }
-.backlight {
-    background-color: darkturquoise;
-}
 
 .top-bar {
     display: flex;
@@ -204,11 +214,40 @@ body {
 
 h1 {
     margin: 0;
+    font-size: 45px;
 }
 
 .day {
-    width: auto;
+    width: 30px;
 }
 .night {
     width: 0;
+}
+
+
+.backlight {
+    z-index: 3;
+    background-color: darkturquoise;
+    box-shadow: 1px 1px 400px 100px darkturquoise ;
+}
+
+.calculator-display {
+    padding: 0;
+    margin-left: 0;
+    border: none;
+    background-color: transparent;
+    font-size: 65px;
+    width: 100%;
+    text-align: right;
+    font-family: 'Rationale';
+    color: black;
+
+}
+.date {
+    height: 30px;
+    margin: 0 auto 10px;
+    font-family: "Rationale";
+    font-size: 35px;
+    text-align: center;
+
 }
