--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,17 @@ a {
     color: rgb(155, 155, 155);
     box-shadow: -1px -1px 10px inset black;
 }
+.btn:active{
+    background-color: rgb(26, 36, 36);
+    color: rgb(155, 155, 155);
+    box-shadow: -1px -1px 10px inset black;
+}
 
 .btn-top {
     background-color: steelblue;
+}
+.btn-top-active {
+    background-color: rgb(0, 33, 59);
 }
 .btn-top:active {
     background-color: rgb(0, 33, 59);
@@ -251,7 +259,7 @@ h1 {
 }
 .backlight-red {
     z-index: 3;
-    animation: red-alarm 0.5s ease-in-out 60 forwards;
+    animation: red-alarm 0.5s ease-in-out 13 forwards;
 }
 
 @keyframes red-alarm {
@@ -272,8 +280,6 @@ h1 {
     }
 
 }
-    
-
 
 .calculator-display {
     padding: 0;
@@ -316,6 +322,9 @@ h1 {
 
 
 .button-watch-assembly {
+    top: 10%;
+    left: 25%;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
