--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,6 @@
     font-size: 10px;
 }
 
-h1 {
-    position: fixed;
-    z-index: -1;
-    font-family: 'Segment7', sans-serif;
-    font-family: 'Bungee Hairline', sans-serif;
-    font-family: 'Rationale', sans-serif;
-}
 
 @font-face {
     font-family: 'Digital Numbers Regular';
@@ -109,7 +102,8 @@ a {
     justify-content: space-between;
     flex-direction: column;
 
-    transition: 1s cubic-bezier(0.25, 0.94, 0, 0.97);
+    transition: 0.5s cubic-bezier(0.25, 0.94, 0, 0.97),
+    background-color 1s cubic-bezier(0.25, 0.94, 0, 0.97);
 }
 .display-outer-div {
     padding: 10px 0 0;
@@ -255,20 +249,29 @@ a {
 }
 
 .top-bar {
-    margin: 0;
+    margin: 0 auto;
+    z-index: -1;
+    font-size: clamp(1rem, 2rem, 1.5rem);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
     padding: 0;
-    width: 100%;
+    width: clamp(300px, 200px, 100vw);
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
 h1 {
-    top: 5px;
-    margin: 0;
     padding: 0;
-    font-size: 1em;
+    margin: 0;
+    display: inline;
+    font-family: 'Segment7', sans-serif;
+    font-family: 'Bungee Hairline', sans-serif;
+    font-family: 'Rationale', sans-serif;
 }
+
 
 .day {
     width: 30px;
@@ -332,9 +335,8 @@ h1 {
 
 }
 .sun-moon {
-    position: fixed;
-    top: 5px;
-    right: 0;
+    margin-left: auto;
+    font-size: 4rem;
     cursor: pointer;
 }
 
